Fix scrollbar moving elements

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -8,6 +8,9 @@
 :root {
     font-family: "Roboto", sans-serif;
 
+    /* prevent navbar movement when scrollbar is added/removed */
+    scrollbar-gutter: stable;
+
     --navbar-item-count: 2;
     --light-grey: #e2e8f0;
     
